--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>EURAUD</td><td>99.98%</td></tr>
-<tr><td>EW</td><td>99.92%</td></tr>
-<tr><td>JNJ</td><td>99.91%</td></tr>
-<tr><td>CADJPY</td><td>99.90%</td></tr>
-<tr><td>EURNZD</td><td>99.88%</td></tr>
-<tr><td>GBPJPY</td><td>99.80%</td></tr>
-<tr><td>GBPJPY</td><td>99.80%</td></tr>
-<tr><td>SCHW</td><td>99.79%</td></tr>
-<tr><td>TGT</td><td>99.79%</td></tr>
-<tr><td>USDCHF</td><td>99.78%</td></tr>
-<tr><td>ACN</td><td>99.78%</td></tr>
-<tr><td>GBPCHF</td><td>99.76%</td></tr>
-<tr><td>XAGUSD</td><td>99.73%</td></tr>
-<tr><td>MSFT</td><td>99.71%</td></tr>
-<tr><td>USDJPY</td><td>99.68%</td></tr>
-<tr><td>EURJPY</td><td>99.61%</td></tr>
-<tr><td>RBUSD</td><td>99.55%</td></tr>
-<tr><td>COST</td><td>99.36%</td></tr>
-<tr><td>PEP</td><td>99.30%</td></tr>
-<tr><td>ADBE</td><td>99.28%</td></tr>
-<tr><td>INTU</td><td>99.22%</td></tr>
-<tr><td>ADP</td><td>99.21%</td></tr>
-<tr><td>GOOGL</td><td>99.16%</td></tr>
-<tr><td>AXP</td><td>99.14%</td></tr>
-<tr><td>LMT</td><td>99.02%</td></tr>
-<tr><td>CVX</td><td>98.95%</td></tr>
-<tr><td>OJUSX</td><td>98.95%</td></tr>
-<tr><td>C</td><td>98.88%</td></tr>
-<tr><td>TJX</td><td>98.73%</td></tr>
-<tr><td>FDX</td><td>98.72%</td></tr>
-<tr><td>HON</td><td>98.71%</td></tr>
-<tr><td>GM</td><td>98.59%</td></tr>
-<tr><td>NOW</td><td>98.53%</td></tr>
-<tr><td>XAUUSD</td><td>98.52%</td></tr>
-<tr><td>TSLA</td><td>98.29%</td></tr>
-<tr><td>SYK</td><td>98.16%</td></tr>
-<tr><td>GCUSD</td><td>98.15%</td></tr>
-<tr><td>USB</td><td>97.83%</td></tr>
-<tr><td>V</td><td>97.83%</td></tr>
-<tr><td>XOM</td><td>97.79%</td></tr>
-<tr><td>ZSUSX</td><td>97.68%</td></tr>
-<tr><td>USDTUSD</td><td>97.66%</td></tr>
-<tr><td>WMT</td><td>97.46%</td></tr>
-<tr><td>CTUSX</td><td>97.37%</td></tr>
-<tr><td>CME</td><td>97.34%</td></tr>
-<tr><td>GE</td><td>97.23%</td></tr>
-<tr><td>HE</td><td>96.69%</td></tr>
-<tr><td>PNC</td><td>96.68%</td></tr>
-<tr><td>CHFJPY</td><td>96.60%</td></tr>
-<tr><td>ICE</td><td>96.28%</td></tr>
-<tr><td>IBM</td><td>96.25%</td></tr>
-<tr><td>NKE</td><td>96.18%</td></tr>
-<tr><td>TMUS</td><td>95.79%</td></tr>
-<tr><td>CL</td><td>95.54%</td></tr>
-<tr><td>FIS</td><td>95.45%</td></tr>
-<tr><td>CRM</td><td>94.44%</td></tr>
-<tr><td>NFLX</td><td>94.42%</td></tr>
-<tr><td>AMZN</td><td>94.23%</td></tr>
-<tr><td>META</td><td>93.29%</td></tr>
-<tr><td>CCUSD</td><td>93.15%</td></tr>
-<tr><td>BKNG</td><td>91.43%</td></tr>
-<tr><td>BTDR</td><td>8.00%</td></tr>
-<tr><td>GS</td><td>6.59%</td></tr>
-<tr><td>JPM</td><td>6.24%</td></tr>
-<tr><td>ITW</td><td>5.49%</td></tr>
-<tr><td>PYPL</td><td>4.94%</td></tr>
-<tr><td>AAPL</td><td>4.77%</td></tr>
-<tr><td>CAT</td><td>4.23%</td></tr>
-<tr><td>ORCL</td><td>4.03%</td></tr>
-<tr><td>NVDA</td><td>3.94%</td></tr>
-<tr><td>ADAUSD</td><td>3.93%</td></tr>
-<tr><td>EL</td><td>3.74%</td></tr>
-<tr><td>ZCUSX</td><td>3.73%</td></tr>
-<tr><td>AON</td><td>3.67%</td></tr>
-<tr><td>DE</td><td>3.49%</td></tr>
-<tr><td>T</td><td>3.32%</td></tr>
-<tr><td>LOW</td><td>3.30%</td></tr>
-<tr><td>BTCUSD</td><td>3.08%</td></tr>
-<tr><td>SCHL</td><td>3.07%</td></tr>
-<tr><td>ZTS</td><td>2.95%</td></tr>
-<tr><td>AMGN</td><td>2.70%</td></tr>
-<tr><td>CVS</td><td>2.48%</td></tr>
-<tr><td>LINKUSD</td><td>2.47%</td></tr>
-<tr><td>ADI</td><td>2.43%</td></tr>
-<tr><td>INTC</td><td>2.36%</td></tr>
-<tr><td>NIO</td><td>2.31%</td></tr>
-<tr><td>BMY</td><td>2.29%</td></tr>
-<tr><td>TROW</td><td>2.18%</td></tr>
-<tr><td>USDCAD</td><td>2.11%</td></tr>
-<tr><td>LNTH</td><td>2.06%</td></tr>
-<tr><td>DIS</td><td>2.02%</td></tr>
-<tr><td>EURGBP</td><td>1.92%</td></tr>
-<tr><td>APD</td><td>1.75%</td></tr>
-<tr><td>ZECUSD</td><td>1.69%</td></tr>
-<tr><td>D</td><td>1.62%</td></tr>
-<tr><td>MS</td><td>1.59%</td></tr>
-<tr><td>KO</td><td>1.48%</td></tr>
-<tr><td>PFE</td><td>1.40%</td></tr>
-<tr><td>TRXUSD</td><td>1.36%</td></tr>
-<tr><td>NRG</td><td>1.35%</td></tr>
-<tr><td>EURCHF</td><td>1.34%</td></tr>
-<tr><td>QCOM</td><td>1.28%</td></tr>
-<tr><td>XRPUSD</td><td>1.28%</td></tr>
-<tr><td>BDX</td><td>1.26%</td></tr>
-<tr><td>LTCUSD</td><td>1.23%</td></tr>
-<tr><td>GBPUSD</td><td>1.15%</td></tr>
-<tr><td>MCD</td><td>1.13%</td></tr>
-<tr><td>BNBUSD</td><td>1.12%</td></tr>
-<tr><td>NZDUSD</td><td>1.12%</td></tr>
-<tr><td>MMC</td><td>1.07%</td></tr>
-<tr><td>NSC</td><td>1.07%</td></tr>
-<tr><td>LLY</td><td>1.02%</td></tr>
-<tr><td>SO</td><td>0.93%</td></tr>
-<tr><td>ABT</td><td>0.93%</td></tr>
-<tr><td>AEP</td><td>0.86%</td></tr>
-<tr><td>SBUX</td><td>0.79%</td></tr>
-<tr><td>ETHUSD</td><td>0.76%</td></tr>
-<tr><td>NAAS</td><td>0.69%</td></tr>
-<tr><td>MRK</td><td>0.69%</td></tr>
-<tr><td>CSCO</td><td>0.59%</td></tr>
+<tr><td>BRK.A</td><td>100.00%</td></tr>
+<tr><td>EURJPY</td><td>100.00%</td></tr>
+<tr><td>USDJPY</td><td>100.00%</td></tr>
+<tr><td>GBPJPY</td><td>99.50%</td></tr>
+<tr><td>NEE</td><td>99.49%</td></tr>
+<tr><td>MDT</td><td>99.34%</td></tr>
+<tr><td>NOW</td><td>99.00%</td></tr>
+<tr><td>WMT</td><td>99.00%</td></tr>
+<tr><td>USDCHF</td><td>98.98%</td></tr>
+<tr><td>MO</td><td>98.77%</td></tr>
+<tr><td>BLK</td><td>98.50%</td></tr>
+<tr><td>VZ</td><td>98.35%</td></tr>
+<tr><td>SCHW</td><td>98.33%</td></tr>
+<tr><td>HON</td><td>97.94%</td></tr>
+<tr><td>ANTM</td><td>97.50%</td></tr>
+<tr><td>EW</td><td>97.19%</td></tr>
+<tr><td>MSFT</td><td>97.00%</td></tr>
+<tr><td>LMT</td><td>97.00%</td></tr>
+<tr><td>ADP</td><td>96.88%</td></tr>
+<tr><td>AXP</td><td>96.50%</td></tr>
+<tr><td>INTU</td><td>96.50%</td></tr>
+<tr><td>IBM</td><td>96.00%</td></tr>
+<tr><td>PEP</td><td>94.94%</td></tr>
+<tr><td>V</td><td>94.50%</td></tr>
+<tr><td>GE</td><td>94.45%</td></tr>
+<tr><td>ICE</td><td>94.30%</td></tr>
+<tr><td>FIS</td><td>93.56%</td></tr>
+<tr><td>TJX</td><td>93.46%</td></tr>
+<tr><td>ACN</td><td>93.42%</td></tr>
+<tr><td>BA</td><td>93.13%</td></tr>
+<tr><td>CL</td><td>92.76%</td></tr>
+<tr><td>COST</td><td>92.45%</td></tr>
+<tr><td>AMZN</td><td>92.43%</td></tr>
+<tr><td>FDX</td><td>91.47%</td></tr>
+<tr><td>PNC</td><td>91.02%</td></tr>
+<tr><td>CME</td><td>90.95%</td></tr>
+<tr><td>NFLX</td><td>90.71%</td></tr>
+<tr><td>ADBE</td><td>90.25%</td></tr>
+<tr><td>BKNG</td><td>89.00%</td></tr>
+<tr><td>JNJ</td><td>88.94%</td></tr>
+<tr><td>PM</td><td>88.01%</td></tr>
+<tr><td>TSLA</td><td>88.00%</td></tr>
+<tr><td>C</td><td>86.90%</td></tr>
+<tr><td>GOOGL</td><td>80.58%</td></tr>
+<tr><td>CRM</td><td>80.39%</td></tr>
+<tr><td>NKE</td><td>80.17%</td></tr>
+<tr><td>USB</td><td>79.99%</td></tr>
+<tr><td>TGT</td><td>77.45%</td></tr>
+<tr><td>TMUS</td><td>75.75%</td></tr>
+<tr><td>CVX</td><td>75.03%</td></tr>
+<tr><td>META</td><td>74.94%</td></tr>
+<tr><td>GM</td><td>72.63%</td></tr>
+<tr><td>USDTUSD</td><td>71.50%</td></tr>
+<tr><td>SYK</td><td>69.00%</td></tr>
+<tr><td>XOM</td><td>60.13%</td></tr>
+<tr><td>ORCL</td><td>39.94%</td></tr>
+<tr><td>GS</td><td>32.27%</td></tr>
+<tr><td>EL</td><td>32.01%</td></tr>
+<tr><td>CAT</td><td>31.58%</td></tr>
+<tr><td>AAPL</td><td>26.00%</td></tr>
+<tr><td>TROW</td><td>25.96%</td></tr>
+<tr><td>D</td><td>25.64%</td></tr>
+<tr><td>ZTS</td><td>24.92%</td></tr>
+<tr><td>NVDA</td><td>23.81%</td></tr>
+<tr><td>SO</td><td>23.77%</td></tr>
+<tr><td>DE</td><td>22.67%</td></tr>
+<tr><td>NRG</td><td>22.41%</td></tr>
+<tr><td>CSCO</td><td>22.39%</td></tr>
+<tr><td>PLD</td><td>22.17%</td></tr>
+<tr><td>DIS</td><td>21.65%</td></tr>
+<tr><td>NSC</td><td>21.02%</td></tr>
+<tr><td>ABT</td><td>20.76%</td></tr>
+<tr><td>AON</td><td>17.02%</td></tr>
+<tr><td>APD</td><td>16.75%</td></tr>
+<tr><td>KO</td><td>16.34%</td></tr>
+<tr><td>BMY</td><td>15.53%</td></tr>
+<tr><td>UNH</td><td>14.89%</td></tr>
+<tr><td>T</td><td>14.36%</td></tr>
+<tr><td>MS</td><td>14.21%</td></tr>
+<tr><td>LLY</td><td>13.32%</td></tr>
+<tr><td>ISRG</td><td>13.20%</td></tr>
+<tr><td>JPM</td><td>12.50%</td></tr>
+<tr><td>ADI</td><td>10.72%</td></tr>
+<tr><td>ITW</td><td>10.50%</td></tr>
+<tr><td>CVS</td><td>9.00%</td></tr>
+<tr><td>MCD</td><td>9.00%</td></tr>
+<tr><td>BDX</td><td>8.69%</td></tr>
+<tr><td>MMC</td><td>8.00%</td></tr>
+<tr><td>DUK</td><td>7.10%</td></tr>
+<tr><td>MRK</td><td>7.10%</td></tr>
+<tr><td>MMM</td><td>6.46%</td></tr>
+<tr><td>AMGN</td><td>6.31%</td></tr>
+<tr><td>HD</td><td>6.00%</td></tr>
+<tr><td>SBUX</td><td>5.78%</td></tr>
+<tr><td>INTC</td><td>5.05%</td></tr>
+<tr><td>QCOM</td><td>4.85%</td></tr>
+<tr><td>NIO</td><td>4.11%</td></tr>
+<tr><td>PYPL</td><td>3.75%</td></tr>
+<tr><td>CI</td><td>3.64%</td></tr>
+<tr><td>SPGI</td><td>3.56%</td></tr>
+<tr><td>DHR</td><td>3.06%</td></tr>
+<tr><td>EURUSD</td><td>3.00%</td></tr>
+<tr><td>LOW</td><td>2.61%</td></tr>
+<tr><td>BNBUSD</td><td>2.50%</td></tr>
+<tr><td>USDCAD</td><td>2.50%</td></tr>
+<tr><td>PSA</td><td>2.01%</td></tr>
+<tr><td>EURGBP</td><td>2.00%</td></tr>
+<tr><td>TXN</td><td>1.60%</td></tr>
+<tr><td>PFE</td><td>1.51%</td></tr>
+<tr><td>AEP</td><td>1.51%</td></tr>
+<tr><td>MDLZ</td><td>1.51%</td></tr>
+<tr><td>GBPUSD</td><td>0.94%</td></tr>
+<tr><td>AUDUSD</td><td>0.50%</td></tr>
 <tr><td>DOGEUSD</td><td>0.50%</td></tr>
-<tr><td>HD</td><td>0.44%</td></tr>
-<tr><td>DUK</td><td>0.33%</td></tr>
-<tr><td>XTZUSD</td><td>0.33%</td></tr>
-<tr><td>XLMUSD</td><td>0.27%</td></tr>
-<tr><td>PSA</td><td>0.27%</td></tr>
-<tr><td>EOSUSD</td><td>0.26%</td></tr>
-<tr><td>XMRUSD</td><td>0.25%</td></tr>
-<tr><td>AUDJPY</td><td>0.21%</td></tr>
-<tr><td>AUDUSD</td><td>0.20%</td></tr>
-<tr><td>NEOUSD</td><td>0.18%</td></tr>
-<tr><td>ETCUSD</td><td>0.18%</td></tr>
-<tr><td>EURUSD</td><td>0.17%</td></tr>
-<tr><td>PLD</td><td>0.16%</td></tr>
-<tr><td>EURCAD</td><td>0.07%</td></tr>
-<tr><td>ATOMUSD</td><td>0.07%</td></tr>
-<tr><td>DASHUSD</td><td>0.05%</td></tr>
-<tr><td>BCHUSD</td><td>0.04%</td></tr>
-<tr><td>AUDCAD</td><td>0.01%</td></tr>
+<tr><td>DASHUSD</td><td>0.31%</td></tr>
+<tr><td>XMRUSD</td><td>0.26%</td></tr>
+<tr><td>ETCUSD</td><td>0.13%</td></tr>
+<tr><td>ZECUSD</td><td>0.00%</td></tr>
+<tr><td>NZDUSD</td><td>0.00%</td></tr>
 </table></body></html>
