--- a/results/classifica.html
+++ b/results/classifica.html
@@ -1,143 +1,123 @@
 <html><head><title>Classifica dei Simboli</title></head><body>
 <h1>Classifica dei Simboli in Base alla Probabilità di Crescita</h1>
 <table border='1'><tr><th>Simbolo</th><th>Probabilità</th></tr>
-<tr><td>GBPCHF</td><td>100.00%</td></tr>
-<tr><td>EURAUD</td><td>99.99%</td></tr>
-<tr><td>EW</td><td>99.98%</td></tr>
-<tr><td>GBPJPY</td><td>99.95%</td></tr>
-<tr><td>GBPJPY</td><td>99.95%</td></tr>
-<tr><td>ZSUSX</td><td>99.94%</td></tr>
-<tr><td>EURNZD</td><td>99.90%</td></tr>
-<tr><td>USDCHF</td><td>99.79%</td></tr>
-<tr><td>MCD</td><td>99.78%</td></tr>
-<tr><td>ADP</td><td>99.78%</td></tr>
-<tr><td>ACN</td><td>99.74%</td></tr>
-<tr><td>XAGUSD</td><td>99.73%</td></tr>
-<tr><td>SCHW</td><td>99.73%</td></tr>
-<tr><td>HON</td><td>99.68%</td></tr>
-<tr><td>USDJPY</td><td>99.66%</td></tr>
-<tr><td>ZCUSX</td><td>99.58%</td></tr>
-<tr><td>TJX</td><td>99.55%</td></tr>
-<tr><td>FIS</td><td>99.53%</td></tr>
-<tr><td>JNJ</td><td>99.51%</td></tr>
-<tr><td>CADJPY</td><td>99.50%</td></tr>
-<tr><td>EURJPY</td><td>99.45%</td></tr>
-<tr><td>SCHL</td><td>99.43%</td></tr>
-<tr><td>TSLA</td><td>99.36%</td></tr>
-<tr><td>COST</td><td>99.36%</td></tr>
-<tr><td>ITW</td><td>99.26%</td></tr>
-<tr><td>BDX</td><td>99.12%</td></tr>
-<tr><td>TGT</td><td>98.96%</td></tr>
-<tr><td>PEP</td><td>98.76%</td></tr>
-<tr><td>KO</td><td>98.72%</td></tr>
-<tr><td>GOOGL</td><td>98.58%</td></tr>
-<tr><td>GBPUSD</td><td>98.56%</td></tr>
-<tr><td>EL</td><td>98.53%</td></tr>
-<tr><td>C</td><td>98.51%</td></tr>
-<tr><td>GCUSD</td><td>98.48%</td></tr>
-<tr><td>CVX</td><td>98.46%</td></tr>
-<tr><td>RBUSD</td><td>98.42%</td></tr>
-<tr><td>IBM</td><td>98.33%</td></tr>
-<tr><td>LMT</td><td>98.32%</td></tr>
-<tr><td>AXP</td><td>98.16%</td></tr>
-<tr><td>USB</td><td>98.12%</td></tr>
-<tr><td>AAPL</td><td>98.07%</td></tr>
-<tr><td>OJUSX</td><td>98.03%</td></tr>
-<tr><td>V</td><td>98.01%</td></tr>
-<tr><td>T</td><td>98.00%</td></tr>
-<tr><td>NSC</td><td>97.92%</td></tr>
-<tr><td>SYK</td><td>97.87%</td></tr>
-<tr><td>XAUUSD</td><td>97.79%</td></tr>
-<tr><td>CME</td><td>97.71%</td></tr>
-<tr><td>CL</td><td>97.60%</td></tr>
-<tr><td>FDX</td><td>97.46%</td></tr>
-<tr><td>CTUSX</td><td>97.37%</td></tr>
-<tr><td>ABT</td><td>97.35%</td></tr>
-<tr><td>GM</td><td>97.32%</td></tr>
-<tr><td>GE</td><td>97.20%</td></tr>
-<tr><td>ICE</td><td>97.04%</td></tr>
-<tr><td>WMT</td><td>96.78%</td></tr>
-<tr><td>XOM</td><td>96.71%</td></tr>
-<tr><td>CCUSD</td><td>96.46%</td></tr>
-<tr><td>INTU</td><td>96.33%</td></tr>
-<tr><td>CHFJPY</td><td>96.27%</td></tr>
-<tr><td>TMUS</td><td>96.26%</td></tr>
-<tr><td>SO</td><td>95.96%</td></tr>
-<tr><td>BKNG</td><td>95.57%</td></tr>
-<tr><td>NOW</td><td>95.02%</td></tr>
-<tr><td>PNC</td><td>94.98%</td></tr>
-<tr><td>EURCHF</td><td>93.81%</td></tr>
-<tr><td>META</td><td>93.26%</td></tr>
-<tr><td>BTCUSD</td><td>11.46%</td></tr>
-<tr><td>JPM</td><td>9.42%</td></tr>
-<tr><td>BTDR</td><td>8.42%</td></tr>
-<tr><td>GS</td><td>7.29%</td></tr>
-<tr><td>PYPL</td><td>5.05%</td></tr>
-<tr><td>ADAUSD</td><td>4.93%</td></tr>
-<tr><td>CRM</td><td>3.82%</td></tr>
-<tr><td>CVS</td><td>3.77%</td></tr>
-<tr><td>DE</td><td>3.49%</td></tr>
-<tr><td>XMRUSD</td><td>3.17%</td></tr>
-<tr><td>NKE</td><td>3.04%</td></tr>
-<tr><td>ZTS</td><td>2.99%</td></tr>
-<tr><td>MSFT</td><td>2.97%</td></tr>
-<tr><td>LINKUSD</td><td>2.83%</td></tr>
-<tr><td>NEOUSD</td><td>2.81%</td></tr>
-<tr><td>APD</td><td>2.48%</td></tr>
-<tr><td>USDCAD</td><td>2.41%</td></tr>
-<tr><td>ORCL</td><td>2.35%</td></tr>
-<tr><td>BMY</td><td>2.29%</td></tr>
-<tr><td>SBUX</td><td>2.15%</td></tr>
-<tr><td>LOW</td><td>2.14%</td></tr>
-<tr><td>ADBE</td><td>2.09%</td></tr>
-<tr><td>DIS</td><td>2.02%</td></tr>
-<tr><td>ZECUSD</td><td>1.97%</td></tr>
-<tr><td>NZDUSD</td><td>1.91%</td></tr>
-<tr><td>LLY</td><td>1.85%</td></tr>
-<tr><td>EURGBP</td><td>1.76%</td></tr>
-<tr><td>LNTH</td><td>1.76%</td></tr>
-<tr><td>AMGN</td><td>1.72%</td></tr>
-<tr><td>ADI</td><td>1.64%</td></tr>
-<tr><td>NIO</td><td>1.62%</td></tr>
-<tr><td>MS</td><td>1.61%</td></tr>
-<tr><td>TROW</td><td>1.60%</td></tr>
-<tr><td>AON</td><td>1.56%</td></tr>
-<tr><td>DOGEUSD</td><td>1.52%</td></tr>
-<tr><td>ETCUSD</td><td>1.52%</td></tr>
-<tr><td>NRG</td><td>1.47%</td></tr>
-<tr><td>XRPUSD</td><td>1.47%</td></tr>
-<tr><td>NFLX</td><td>1.40%</td></tr>
-<tr><td>NAAS</td><td>1.37%</td></tr>
-<tr><td>AEP</td><td>1.34%</td></tr>
-<tr><td>BNBUSD</td><td>1.20%</td></tr>
-<tr><td>AMZN</td><td>1.14%</td></tr>
-<tr><td>CAT</td><td>1.12%</td></tr>
-<tr><td>MMC</td><td>1.11%</td></tr>
-<tr><td>PFE</td><td>1.03%</td></tr>
-<tr><td>ETHUSD</td><td>0.99%</td></tr>
-<tr><td>NVDA</td><td>0.72%</td></tr>
-<tr><td>CSCO</td><td>0.71%</td></tr>
-<tr><td>D</td><td>0.67%</td></tr>
-<tr><td>LTCUSD</td><td>0.66%</td></tr>
-<tr><td>HE</td><td>0.61%</td></tr>
-<tr><td>INTC</td><td>0.61%</td></tr>
-<tr><td>AUDUSD</td><td>0.60%</td></tr>
-<tr><td>XTZUSD</td><td>0.55%</td></tr>
-<tr><td>QCOM</td><td>0.55%</td></tr>
-<tr><td>XLMUSD</td><td>0.52%</td></tr>
-<tr><td>TRXUSD</td><td>0.48%</td></tr>
-<tr><td>DUK</td><td>0.45%</td></tr>
-<tr><td>EURUSD</td><td>0.35%</td></tr>
-<tr><td>AUDJPY</td><td>0.25%</td></tr>
-<tr><td>HD</td><td>0.24%</td></tr>
-<tr><td>EURCAD</td><td>0.21%</td></tr>
-<tr><td>PSA</td><td>0.17%</td></tr>
-<tr><td>MRK</td><td>0.17%</td></tr>
-<tr><td>PLD</td><td>0.14%</td></tr>
-<tr><td>EOSUSD</td><td>0.11%</td></tr>
-<tr><td>ATOMUSD</td><td>0.09%</td></tr>
-<tr><td>DASHUSD</td><td>0.06%</td></tr>
-<tr><td>BCHUSD</td><td>0.02%</td></tr>
-<tr><td>USDTUSD</td><td>0.01%</td></tr>
-<tr><td>AUDCAD</td><td>0.00%</td></tr>
+<tr><td>BRK.A</td><td>100.00%</td></tr>
+<tr><td>EURJPY</td><td>100.00%</td></tr>
+<tr><td>USDCHF</td><td>100.00%</td></tr>
+<tr><td>USDJPY</td><td>100.00%</td></tr>
+<tr><td>MDT</td><td>99.90%</td></tr>
+<tr><td>IBM</td><td>99.50%</td></tr>
+<tr><td>VZ</td><td>99.45%</td></tr>
+<tr><td>EW</td><td>99.26%</td></tr>
+<tr><td>LMT</td><td>99.19%</td></tr>
+<tr><td>SCHW</td><td>99.06%</td></tr>
+<tr><td>AXP</td><td>99.00%</td></tr>
+<tr><td>BLK</td><td>99.00%</td></tr>
+<tr><td>NEE</td><td>98.95%</td></tr>
+<tr><td>WMT</td><td>98.93%</td></tr>
+<tr><td>MO</td><td>98.61%</td></tr>
+<tr><td>ADP</td><td>98.50%</td></tr>
+<tr><td>CME</td><td>98.49%</td></tr>
+<tr><td>NOW</td><td>98.47%</td></tr>
+<tr><td>HON</td><td>98.46%</td></tr>
+<tr><td>EL</td><td>98.43%</td></tr>
+<tr><td>MCD</td><td>98.00%</td></tr>
+<tr><td>GBPJPY</td><td>97.50%</td></tr>
+<tr><td>ACN</td><td>97.44%</td></tr>
+<tr><td>ICE</td><td>97.37%</td></tr>
+<tr><td>GBPUSD</td><td>96.94%</td></tr>
+<tr><td>ANTM</td><td>96.40%</td></tr>
+<tr><td>C</td><td>96.14%</td></tr>
+<tr><td>PEP</td><td>95.93%</td></tr>
+<tr><td>GE</td><td>95.50%</td></tr>
+<tr><td>TJX</td><td>95.43%</td></tr>
+<tr><td>COST</td><td>95.29%</td></tr>
+<tr><td>NSC</td><td>95.02%</td></tr>
+<tr><td>FIS</td><td>94.75%</td></tr>
+<tr><td>ITW</td><td>94.00%</td></tr>
+<tr><td>ABT</td><td>93.90%</td></tr>
+<tr><td>CL</td><td>93.89%</td></tr>
+<tr><td>T</td><td>93.82%</td></tr>
+<tr><td>GOOGL</td><td>92.44%</td></tr>
+<tr><td>TSLA</td><td>92.00%</td></tr>
+<tr><td>SYK</td><td>91.47%</td></tr>
+<tr><td>V</td><td>91.00%</td></tr>
+<tr><td>SO</td><td>90.95%</td></tr>
+<tr><td>BA</td><td>90.36%</td></tr>
+<tr><td>USB</td><td>87.72%</td></tr>
+<tr><td>FDX</td><td>85.54%</td></tr>
+<tr><td>TGT</td><td>85.13%</td></tr>
+<tr><td>TMUS</td><td>83.73%</td></tr>
+<tr><td>PM</td><td>83.25%</td></tr>
+<tr><td>BKNG</td><td>82.64%</td></tr>
+<tr><td>AAPL</td><td>81.47%</td></tr>
+<tr><td>JNJ</td><td>81.03%</td></tr>
+<tr><td>KO</td><td>80.07%</td></tr>
+<tr><td>BDX</td><td>78.94%</td></tr>
+<tr><td>PNC</td><td>74.88%</td></tr>
+<tr><td>META</td><td>70.51%</td></tr>
+<tr><td>GM</td><td>70.43%</td></tr>
+<tr><td>INTU</td><td>69.73%</td></tr>
+<tr><td>XOM</td><td>61.03%</td></tr>
+<tr><td>CVX</td><td>60.47%</td></tr>
+<tr><td>ORCL</td><td>31.98%</td></tr>
+<tr><td>XMRUSD</td><td>30.27%</td></tr>
+<tr><td>TROW</td><td>27.36%</td></tr>
+<tr><td>D</td><td>27.25%</td></tr>
+<tr><td>CSCO</td><td>23.99%</td></tr>
+<tr><td>ADBE</td><td>22.98%</td></tr>
+<tr><td>DE</td><td>20.50%</td></tr>
+<tr><td>ZTS</td><td>19.79%</td></tr>
+<tr><td>GS</td><td>19.41%</td></tr>
+<tr><td>DIS</td><td>16.68%</td></tr>
+<tr><td>CRM</td><td>16.59%</td></tr>
+<tr><td>APD</td><td>15.60%</td></tr>
+<tr><td>CAT</td><td>15.48%</td></tr>
+<tr><td>NFLX</td><td>15.39%</td></tr>
+<tr><td>MS</td><td>14.95%</td></tr>
+<tr><td>AMGN</td><td>14.87%</td></tr>
+<tr><td>UNH</td><td>14.70%</td></tr>
+<tr><td>JPM</td><td>14.62%</td></tr>
+<tr><td>BMY</td><td>14.00%</td></tr>
+<tr><td>AON</td><td>12.47%</td></tr>
+<tr><td>LLY</td><td>12.35%</td></tr>
+<tr><td>NVDA</td><td>11.50%</td></tr>
+<tr><td>ISRG</td><td>10.67%</td></tr>
+<tr><td>DUK</td><td>9.81%</td></tr>
+<tr><td>ADI</td><td>9.53%</td></tr>
+<tr><td>PLD</td><td>8.62%</td></tr>
+<tr><td>MSFT</td><td>8.55%</td></tr>
+<tr><td>NKE</td><td>7.58%</td></tr>
+<tr><td>MMM</td><td>7.40%</td></tr>
+<tr><td>CVS</td><td>7.11%</td></tr>
+<tr><td>AMZN</td><td>5.96%</td></tr>
+<tr><td>AEP</td><td>5.88%</td></tr>
+<tr><td>SBUX</td><td>5.52%</td></tr>
+<tr><td>NRG</td><td>5.50%</td></tr>
+<tr><td>CI</td><td>4.73%</td></tr>
+<tr><td>SPGI</td><td>4.18%</td></tr>
+<tr><td>HD</td><td>4.00%</td></tr>
+<tr><td>MMC</td><td>3.94%</td></tr>
+<tr><td>PYPL</td><td>3.65%</td></tr>
+<tr><td>NIO</td><td>3.21%</td></tr>
+<tr><td>PSA</td><td>2.56%</td></tr>
+<tr><td>BNBUSD</td><td>2.50%</td></tr>
+<tr><td>MDLZ</td><td>2.11%</td></tr>
+<tr><td>EURGBP</td><td>2.00%</td></tr>
+<tr><td>USDCAD</td><td>2.00%</td></tr>
+<tr><td>USDTUSD</td><td>2.00%</td></tr>
+<tr><td>DHR</td><td>1.86%</td></tr>
+<tr><td>LOW</td><td>1.27%</td></tr>
+<tr><td>QCOM</td><td>1.19%</td></tr>
+<tr><td>INTC</td><td>1.05%</td></tr>
+<tr><td>AUDUSD</td><td>1.00%</td></tr>
+<tr><td>DASHUSD</td><td>1.00%</td></tr>
+<tr><td>ETCUSD</td><td>1.00%</td></tr>
+<tr><td>EURUSD</td><td>1.00%</td></tr>
+<tr><td>NZDUSD</td><td>1.00%</td></tr>
+<tr><td>PFE</td><td>1.00%</td></tr>
+<tr><td>TXN</td><td>1.00%</td></tr>
+<tr><td>MRK</td><td>0.47%</td></tr>
+<tr><td>DOGEUSD</td><td>0.00%</td></tr>
+<tr><td>ZECUSD</td><td>0.00%</td></tr>
 </table></body></html>
