--- a/COCOA.html
+++ b/COCOA.html
@@ -1,4 +1,4 @@
-<html><head><title>Dati Finanziari per Cocoa.</title></head><body>
+<html><head><title>Dati Finanziari per Cocoa</title></head><body>
 <h1>Dati finanziari per: Cocoa to US Dollar (COCOA)</h1>
 <img src='https://images.app.goo.gl/fFwHtyYLbQtHWmyLA' alt='Cocoa logo' style='width:100px;height:auto;'/>
 <p>Cocoa is a soft commodity traded on global exchanges, primarily the Intercontinental Exchange (ICE) and the London International Financial Futures and Options Exchange (LIFFE). It is derived from cocoa beans, which are the primary ingredient in chocolate and other confectionery products. Cocoa futures contracts are commonly used by producers, traders, and investors to hedge against price fluctuations and speculate on market trends.
