--- a/sponsor/sponsor_panel.html
+++ b/sponsor/sponsor_panel.html
@@ -9,22 +9,22 @@
     <div id="sponsor-panel">
         <!-- Stato del pannello -->
         <div id="status">
-            <strong>Attivo:</strong> <span id="active">false</span>
+            <strong>Attivo:</strong> <span id="active">true</span>
         </div>
 
         <!-- Titolo del pannello -->
         <div id="title-section">
-            <strong>Title:</strong> <span id="title">Discover PayPal (by Elon Musk)!</span>
+            <strong>Title:</strong> <span id="title">Earn Rewards with CashemAll!</span>
         </div>
 
         <!-- Corpo del pannello -->
         <div id="corp-section">
-            <strong>Corp:</strong> <span id="corp">Find it on the store and try it now! (Guai a te se non lo installiii!)</span>
+            <strong>Corp:</strong> <span id="corp">Download CashemAll and turn your time into rewards! Complete tasks, earn points and redeem real rewards.</span>
         </div>
 
         <!-- link del pannello -->
         <div id="link-section">
-            <strong>Link:</strong> <span id="link">https://play.google.com/store/apps/details?id=com.vectordev.einsight</span>
+            <strong>Link:</strong> <span id="link">https://sites.google.com/view/cashemall-apk</span>
         </div>
     </div>
 </body>
