--- a/sponsor/sponsor_panel.html
+++ b/sponsor/sponsor_panel.html
@@ -14,12 +14,12 @@
 
         <!-- Titolo del pannello -->
         <div id="title-section">
-            <strong>Title:</strong> <span id="title">Earn Rewards with CashemAll!</span>
+            <strong>Title:</strong> <span id="title">🚀Earn Rewards with CashemAll!</span>
         </div>
 
         <!-- Corpo del pannello -->
         <div id="corp-section">
-            <strong>Corp:</strong> <span id="corp">Download CashemAll and turn your time into rewards! Complete tasks, earn points and redeem real rewards.</span>
+            <strong>Corp:</strong> <span id="corp">Download CashemAll and turn your time into rewards! Complete tasks and redeem real rewards now.</span>
         </div>
 
         <!-- link del pannello -->
