--- a/sponsor/sponsor_panel.html
+++ b/sponsor/sponsor_panel.html
@@ -14,17 +14,17 @@
 
         <!-- Titolo del pannello -->
         <div id="title-section">
-            <strong>Title:</strong> <span id="title">🚀 Exciting Update Coming Soon!</span>
+            <strong>Title:</strong> <span id="title">🚀 Earn Rewards with CashemAll!</span>
         </div>
 
         <!-- Corpo del pannello -->
         <div id="corp-section">
-            <strong>Corp:</strong> <span id="corp">We’re working to improve your experience. Stay tuned — an app update is just around the corner!</span>
+            <strong>Corp:</strong> <span id="corp">Download CashemAll and turn your time into rewards! Complete tasks and redeem real rewards now.</span>
         </div>
 
         <!-- link del pannello -->
         <div id="link-section">
-            <strong>Link:</strong> <span id="link">https://play.google.com/store/apps/details?id=com.vectordev.einsight</span>
+            <strong>Link:</strong> <span id="link">https://sites.google.com/view/cashemall-apk</span>
         </div>
     </div>
 </body>
